# sol-cardgame-contract

./: Anchor.toml  README.md  package.json
cli/: command.ts  scripts.ts
programs/goal-post/: Cargo.toml
programs/goal-post/src/: account.rs  constants.rs  error.rs  lib.rs  utils.rs
sdk/: config.ts  index.ts  utils.ts
sdk/accounts/: globalPool.ts  index.ts
sdk/idl/: goal_post.json
sdk/instructions/: deposit.ts  index.ts  initialize.ts  transferOwnership.ts  updateAuthority.ts  withdraw.ts
tests/: goal-post.ts  utils.ts
